Thoroughly went through each chart to make it interactive and set up the overall webpage.

--- a/WebVisualizations/NBA Salary Data Analysis.ipynb
+++ b/WebVisualizations/NBA Salary Data Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
        "4  abdursh01         95866000"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -665,13 +665,13 @@
     "plt.ylabel(\"Career Salary ($Hundreds of Millions)\")\n",
     "plt.xlabel(\"Career Win Shares\")\n",
     "plt.legend(loc='best')\n",
-    "plt.savefig('visualizations/Win Shares by Salary - Total')\n",
+    "plt.savefig('visualizations/Total')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -714,13 +714,13 @@
     "plt.title(\"Wins Shares by Salary Pre-Merger (Drafted Before 1976)\")\n",
     "plt.ylabel(\"Career Salary ($)\")\n",
     "plt.xlabel(\"Career Win Shares\")\n",
-    "plt.savefig('visualizations/Win Shares by Salary - Pre-Merger')\n",
+    "plt.savefig('visualizations/PreMerger')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -749,13 +749,13 @@
     "plt.title(\"Wins Shares by Salary (Drafted 1980-1989)\")\n",
     "plt.ylabel(\"Career Salary ($Hundreds of Millions)\")\n",
     "plt.xlabel(\"Career Win Shares\")\n",
-    "plt.savefig('visualizations/Win Shares by Salary - Eighties')\n",
+    "plt.savefig('visualizations/Eighties')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -785,13 +785,13 @@
     "plt.ylabel(\"Career Salary ($Hundreds of Millions)\")\n",
     "plt.xlabel(\"Career Win Shares\")\n",
     "\n",
-    "plt.savefig('visualizations/Win Shares by Salary - Nineties')\n",
+    "plt.savefig('visualizations/Nineties')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -821,13 +821,13 @@
     "fit = slope * aughts['career_WS'] + intercept\n",
     "ax.plot(aughts['career_WS'], fit, '-', color='blue')\n",
     "\n",
-    "plt.savefig('visualizations/Win Shares by Salary - Aughts')\n",
+    "plt.savefig('visualizations/Aughts')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -857,7 +857,7 @@
     "fit = slope * tens['career_WS'] + intercept\n",
     "ax.plot(tens['career_WS'], fit, '-', color='darkgreen')\n",
     "\n",
-    "plt.savefig('visualizations/Win Shares by Salary - Tens')\n",
+    "plt.savefig('visualizations/Tens')\n",
     "plt.show()"
    ]
   },
