Adjusted charts and finished analysis.

--- a/WebVisualizations/NBA Salary Data Analysis.ipynb
+++ b/WebVisualizations/NBA Salary Data Analysis.ipynb
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -716,6 +716,238 @@
     "plt.xlabel(\"Career Win Shares\")\n",
     "plt.savefig('visualizations/PreMerger')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>player_id</th>\n",
+       "      <th>birthDate</th>\n",
+       "      <th>birthPlace</th>\n",
+       "      <th>career_AST</th>\n",
+       "      <th>career_FG%</th>\n",
+       "      <th>career_FG3%</th>\n",
+       "      <th>career_FT%</th>\n",
+       "      <th>career_G</th>\n",
+       "      <th>career_PER</th>\n",
+       "      <th>career_PTS</th>\n",
+       "      <th>...</th>\n",
+       "      <th>height</th>\n",
+       "      <th>highSchool</th>\n",
+       "      <th>name</th>\n",
+       "      <th>position</th>\n",
+       "      <th>shoots</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>career_earnings</th>\n",
+       "      <th>fit</th>\n",
+       "      <th>overpaid/underpaid</th>\n",
+       "      <th>percent_overpaid/underpaid</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>2226</td>\n",
+       "      <td>waltobi01</td>\n",
+       "      <td>November 5, 1952</td>\n",
+       "      <td>La Mesa, California</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>52.1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>468</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>13.3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6-11</td>\n",
+       "      <td>Helix in La Mesa, California</td>\n",
+       "      <td>Bill Walton</td>\n",
+       "      <td>Center</td>\n",
+       "      <td>Right</td>\n",
+       "      <td>210lb</td>\n",
+       "      <td>2625000.0</td>\n",
+       "      <td>527063.447647</td>\n",
+       "      <td>2.097937e+06</td>\n",
+       "      <td>3.980425</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>504</td>\n",
+       "      <td>dawkida01</td>\n",
+       "      <td>January 11, 1957</td>\n",
+       "      <td>Orlando, Florida</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>57.2</td>\n",
+       "      <td>13.3</td>\n",
+       "      <td>68.5</td>\n",
+       "      <td>726</td>\n",
+       "      <td>15.8</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6-11</td>\n",
+       "      <td>Evans in Orlando, Florida</td>\n",
+       "      <td>Darryl Dawkins</td>\n",
+       "      <td>Center</td>\n",
+       "      <td>Right</td>\n",
+       "      <td>251lb</td>\n",
+       "      <td>2734000.0</td>\n",
+       "      <td>673999.140986</td>\n",
+       "      <td>2.060001e+06</td>\n",
+       "      <td>3.056385</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2252</td>\n",
+       "      <td>webstma01</td>\n",
+       "      <td>April 13, 1952</td>\n",
+       "      <td>Baltimore, Maryland</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>48.8</td>\n",
+       "      <td>28.6</td>\n",
+       "      <td>62.1</td>\n",
+       "      <td>617</td>\n",
+       "      <td>13.8</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7-1</td>\n",
+       "      <td>Edmondson in Baltimore, Maryland</td>\n",
+       "      <td>Marvin Webster</td>\n",
+       "      <td>Center</td>\n",
+       "      <td>Right</td>\n",
+       "      <td>225lb</td>\n",
+       "      <td>900000.0</td>\n",
+       "      <td>322181.283696</td>\n",
+       "      <td>5.778187e+05</td>\n",
+       "      <td>1.793458</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>223</td>\n",
+       "      <td>bosweto01</td>\n",
+       "      <td>October 2, 1953</td>\n",
+       "      <td>Montgomery, Alabama</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>53.3</td>\n",
+       "      <td>54.5</td>\n",
+       "      <td>72.4</td>\n",
+       "      <td>366</td>\n",
+       "      <td>13.7</td>\n",
+       "      <td>7.7</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6-9</td>\n",
+       "      <td>Carver in Montgomery, Alabama</td>\n",
+       "      <td>Tom Boswell</td>\n",
+       "      <td>Power Forward</td>\n",
+       "      <td>Right</td>\n",
+       "      <td>220lb</td>\n",
+       "      <td>65000.0</td>\n",
+       "      <td>28309.897018</td>\n",
+       "      <td>3.669010e+04</td>\n",
+       "      <td>1.296017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1991</td>\n",
+       "      <td>soberri01</td>\n",
+       "      <td>January 15, 1953</td>\n",
+       "      <td>Bronx, New York</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>45.9</td>\n",
+       "      <td>29.1</td>\n",
+       "      <td>84.3</td>\n",
+       "      <td>821</td>\n",
+       "      <td>13.9</td>\n",
+       "      <td>13.3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6-3</td>\n",
+       "      <td>DeWitt Clinton in Bronx, New York</td>\n",
+       "      <td>Ricky Sobers</td>\n",
+       "      <td>Shooting Guard and Point Guard</td>\n",
+       "      <td>Right</td>\n",
+       "      <td>198lb</td>\n",
+       "      <td>702000.0</td>\n",
+       "      <td>375988.720693</td>\n",
+       "      <td>3.260113e+05</td>\n",
+       "      <td>0.867077</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 28 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      player_id         birthDate           birthPlace  career_AST career_FG%  \\\n",
+       "2226  waltobi01  November 5, 1952  La Mesa, California         3.4       52.1   \n",
+       "504   dawkida01  January 11, 1957     Orlando, Florida         1.3       57.2   \n",
+       "2252  webstma01    April 13, 1952  Baltimore, Maryland         1.2       48.8   \n",
+       "223   bosweto01   October 2, 1953  Montgomery, Alabama         1.6       53.3   \n",
+       "1991  soberri01  January 15, 1953      Bronx, New York         4.3       45.9   \n",
+       "\n",
+       "     career_FG3% career_FT%  career_G career_PER  career_PTS  ... height  \\\n",
+       "2226         0.0       66.0       468       20.0        13.3  ...   6-11   \n",
+       "504         13.3       68.5       726       15.8        12.0  ...   6-11   \n",
+       "2252        28.6       62.1       617       13.8         7.0  ...    7-1   \n",
+       "223         54.5       72.4       366       13.7         7.7  ...    6-9   \n",
+       "1991        29.1       84.3       821       13.9        13.3  ...    6-3   \n",
+       "\n",
+       "                             highSchool            name  \\\n",
+       "2226       Helix in La Mesa, California     Bill Walton   \n",
+       "504           Evans in Orlando, Florida  Darryl Dawkins   \n",
+       "2252   Edmondson in Baltimore, Maryland  Marvin Webster   \n",
+       "223       Carver in Montgomery, Alabama     Tom Boswell   \n",
+       "1991  DeWitt Clinton in Bronx, New York    Ricky Sobers   \n",
+       "\n",
+       "                            position shoots weight career_earnings  \\\n",
+       "2226                          Center  Right  210lb       2625000.0   \n",
+       "504                           Center  Right  251lb       2734000.0   \n",
+       "2252                          Center  Right  225lb        900000.0   \n",
+       "223                    Power Forward  Right  220lb         65000.0   \n",
+       "1991  Shooting Guard and Point Guard  Right  198lb        702000.0   \n",
+       "\n",
+       "                fit overpaid/underpaid percent_overpaid/underpaid  \n",
+       "2226  527063.447647       2.097937e+06                   3.980425  \n",
+       "504   673999.140986       2.060001e+06                   3.056385  \n",
+       "2252  322181.283696       5.778187e+05                   1.793458  \n",
+       "223    28309.897018       3.669010e+04                   1.296017  \n",
+       "1991  375988.720693       3.260113e+05                   0.867077  \n",
+       "\n",
+       "[5 rows x 28 columns]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pre_merger['fit'] = fit\n",
+    "pre_merger['overpaid/underpaid'] = pre_merger['career_earnings']-pre_merger['fit']\n",
+    "pre_merger['percent_overpaid/underpaid'] = pre_merger['overpaid/underpaid']/pre_merger['fit']\n",
+    "\n",
+    "pre_merger = pre_merger.sort_values(by=['percent_overpaid/underpaid'], ascending=False)\n",
+    "# pre_merger = pre_merger.sort_values(by=['percent_overpaid/underpaid'], ascending=True)\n",
+    "# pre_merger = pre_merger.sort_values(by=['overpaid/underpaid'], ascending=False)\n",
+    "# pre_merger = pre_merger.sort_values(by=['overpaid/underpaid'], ascending=True)\n",
+    "\n",
+    "pre_merger.head()"
    ]
   },
   {
